[package]
name = "usu"
description = "An unopinionated `/bin/su`"
version = "0.1.0"
authors = ["Steve Smith <tarkasteve@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
cfg-if = "1.0.0"
extrasafe = "0.1.2"
libc = "0.2.142"
log = "0.4.17"
simplelog = "0.12.1"
structopt = "0.3.26"
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.5.0"
test-case = "3.1.0"
#docker-test = { path = "../docker-test/" }
docker-test = "0.4.0"
